--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,11 @@ html
 :root
 {
     --main-color: #00a15e;;
-    --shadow-black-100:0 5px 15px rgba(0,0,0,0.2);
+    --main-box-shadow :0 5px 15px rgba(0,0,0,0.2);
     --black-900:#000;
     --black-400:#646f87;
     --black-alpha-100:rgba(0,0,0,.05);
+    --main-background-color : #f7f7f7;
 }
 body
 {
@@ -62,6 +63,26 @@ section
     padding: 80px 0;
     border-bottom: 2px solid var(--main-color);
 }
+
+
+.main-title
+{
+    display: flex;
+    align-items: center;
+    font-size: 2em;
+    color: black;
+    min-width: 100%;
+    margin: 1em;
+    text-align: center;
+}
+
+.Titres h2
+{
+    color: var(--main-color);
+    margin-top: 2em;
+}
+
+
 /*XXXXXXXXXXXXXXXX Barre de navigation XXXXXXXXXXXXX*/
 nav
 {
@@ -241,42 +262,27 @@ img
 
 #Ticket-section .all-ticket
 {
-    
     display: flex;
     flex-direction: row;
-   justify-content: space-between;
+   justify-content: center;
 }
 
-#Ticket-section .main-title
-{
-    display: flex;
-    align-items: center;
-    font-size: 2em;
-    color: black;
-    min-width: 100%;
-    margin: 1em;
-    text-align: center;
-}
 
-#Ticket-section .Titres h2
-{
-    color: var(--main-color);
-    margin-top: 2em;
-}
 
-#Ticket .Ticket-container
+#Ticket-section .Ticket-container
 {
     flex: 0 0 33.33%;
     max-width: 33.33%;
-    padding: 30px;
+    padding: 2em;
     margin: 2em;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    
     
 }
 .pricing-plan
 {
-    box-shadow: var(--shadow-black-100);
+    box-shadow: var(--main-box-shadow);
     border-radius: 50%;
     overflow: hidden;
     width: 100%;
@@ -390,33 +396,60 @@ img
 
 
 /*XXXXXXXXXXXXXXXX Contact XXXXXXXXXXXXX*/
-.contact-section
+#Contact-section
 {
     min-height: 100vh;
-    background-color: var(--black-100);
+    min-width: 100%;
+    background-color: var(--main-background-color);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
-.contact-section .contact-item
+
+#Contact-section .form-container
+{
+    display: flex;
+    flex-direction: row;
+   justify-content: center;
+   margin-bottom: 1.5em;
+}
+
+#Contact-section  .form-group1
+{
+    display: inline-block;
+    min-width: 30%;
+    margin-right : 4%;
+}
+
+#Contact-section  .form-group2
+{
+    display: inline-block;
+    min-width: 65%;
+}
+
+
+#Contact-section .contact-item
 {
     flex: 0 0 33.33%;
     max-width: 33.33%;
-    padding: 20px;
+    padding: 2em;
     display: flex;
-    flex-wrap: wrap;
 }
-.contact-section .contact-item-inner
+
+#Contact-section .contact-item-inner
 {
     padding: 30px 15px;
     text-align: center;
-    box-shadow: var(--shadow-black-100);
-    border-radius: 5px;
+    box-shadow: var(--main-box-shadow);
+    border-radius: 0.5em;
     width: 100%;
 }
-.contact-section .contact-item-inner i
+#Contact-section .contact-item-inner i
 {
     font-size: 25px;
     color: var(--main-color);
 }
-.contact-section .contact-item-inner span
+#Contact-section .contact-item-inner span
 {
     display: block;
     font-size: 16px;
@@ -425,80 +458,76 @@ img
     margin: 15px 0 10px;
     text-transform: capitalize;
 }
-.contact-section .contact-item-inner p
+#Contact-section .contact-item-inner p
 {
     font-size: 16px;
     color: var(--black-400);
     line-height: 26px;
     margin: 0;
 }
-.contact-section .contact-form
+#Contact-section .contact-form
 {
     flex: 0 0 100%;
-    max-width: 100%;
-    margin-top: 50px;
 }
-.contact-section .w-50
+
+#Contact-section .input-form
 {
-    padding: 0 15px;
-    flex: 0 0 50%;
-    max-width: 50%;
-}
-.contact-section .input-group
-{
-    margin: 0 0 25px;
     border-radius: 30px;
     background-color: var(--black-100);
-    box-shadow: var(--shadow-black-100);
+    box-shadow: var(--main-box-shadow);
 }
-.contact-section .input-group .input-control
+#Contact-section .input-form .input-control
 {
-    height: 45px;
+    height: 4em;
     display: block;
     width: 100%;
     border-radius: 30px;
     border: none;
     outline: none;
     background-color: transparent;
-    font-size: 16px;
-    padding: 0 15px;
+    font-size: bolder;
+    padding: 1em;
     transition: all 0.3s ease;
     color: var(--black-400);
 }
-.contact-section .input-group textarea.input-control
+
+#Contact-section .input-form textarea.input-control
 {
-    height: 180px;
-    padding-top: 15px;
+    height: 20em;
     resize: none;
 }
-.contact-section .input-group .input-control:focus
+
+#Contact-section .input-form .input-control:focus
 {
-    border: 1px solid var(--main-color);
+    border: 2px solid var(--main-color);
+    font-weight: bold;
 }
-.contact-section .submit-btn
+
+#Contact-section .submit-form
 {
     flex: 0 0 100%;
     max-width: 100%;
     text-align: right;
-    padding: 0 15px;
+    padding: 0 1em;
 }
 
-.btn-1
+#Contact-section .contact-button
 {
     background-color: var(--main-color);
-    padding: 15px 40px;
+    padding: 1em;
     border: none;
     color: white;
-    border-radius: 5px;
-    font-size: 16px;
+    border-radius: 30px;
+    font-size: 1em;
     text-transform: capitalize;
-    font-weight: 600;
+    font-weight: bolder;
     transition: all 0.3s ease-out;
 }
-.btn-1:hover
+#Contact-section .contact-button:hover
 {
-    color: var(--white);
-    background-color: rgba(0,167,142,0.7);
+    background-color: var(--main-background-color);
+    color: var(--main-color);
+    border: 2px solid var(--main-color);  
 }
 
 
